Changed backed to fgeal (with some glitches)

--- a/terrarium/.project
+++ b/terrarium/.project
@@ -3,6 +3,7 @@
 	<name>terrarium</name>
 	<comment></comment>
 	<projects>
+		<project>fgeal</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
