--- a/terrarium/.gitignore
+++ b/terrarium/.gitignore
@@ -1,3 +1,4 @@
+# Eclipse build configuration folders
 /Debug/
 /Debug Linux/
 /Debug Linux tweaked
@@ -5,3 +6,6 @@
 /Release/
 /Release Linux/
 /Debug Linux fgeal/
+
+# Eclipse trash
+language.settings.xml
