--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 # Eclipse build configuration folders
 /Debug/
-/Debug Linux/
-/Debug Linux tweaked
-/Debug Windows/
 /Release/
-/Release Linux/
-/Debug Linux fgeal/
+/linux-gcc-debug/
+/linux-gcc-release/
+/win32-mingw-debug/
+/win32-mingw-release/
 
 # Eclipse trash
 language.settings.xml
